css/site.css
h1, h2, h3, h4, h5, h6, p, li, ul, ol, dl, div {
    font-size: 1em;
    margin: 0;
    padding: 0;
}

html {
    background-color: #fbfaf9;
    background-image: linear-gradient(50, #fbfaf9 25%, rgb(212,212,212) 100%);
    background-image: -o-linear-gradient(50, #fbfaf9 25%, rgb(212,212,212) 100%);
    background-image: -moz-linear-gradient(50, #fbfaf9 25%, rgb(212,212,212) 100%);
    background-image: -webkit-linear-gradient(50, #fbfaf9 25%, rgb(212,212,212) 100%);
    background-image: -ms-linear-gradient(50, #fbfaf9 25%, rgb(212,212,212) 100%);
    background-image: -webkit-gradient(
        linear,
        left 50,
        left 0,
        color-stop(0.25, #fbfaf9),
        color-stop(1, rgb(212,212,212))
    );
    background-repeat: no-repeat;
    font: 87.5%/1.4 Arial,sans-serif
}

.logo {
    padding: 10px 0;
}

.navigation {
    position: relative;
    float: left;
    width: 140px;
    z-index: 1;
}

.navigation li {
    padding: 3px 20px;
}
.navigation a {
    color: #2b73b7;
    font-size: .875em;
    text-decoration: none;
    display: block;
}

.navigation a:hover {
    text-decoration: underline;
}

.main-content {
    float: right;
    width: 100%;
    margin-left: -140px;
}

.main-inner .toc {
    float: right;
    width: 200px;
    border-left: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    padding: 10px 5px;
    margin: -15px -20px 5px 5px;
    font-size: 0.875em;
}

.main-inner .toc > i {
    display: none;
}

.main-inner .toc ol {
    margin: 0;
    padding: 0;
}

.main-inner .toc > ol {
    margin: 0 0 0 10px;
    padding: 0;
}

.main-inner .toc li {
    list-style: circle;
    margin: 0 0 0 10px;
    padding: 0;
}

.main-inner {
    margin-left: 140px;
    margin-right: 20px;
    background: #fff;
    border-radius: 2px;
    box-shadow: 0 0 .5em #999;
    padding: 15px 20px;
}

.main-inner h1,
.main-inner h2,
.main-inner h3,
.main-inner h4,
.main-inner h5,
.main-inner h6 {
    padding: 10px 0;
}

.main-inner h1 { font-size: 1.5em; }
.main-inner h2 { font-size: 1.4em; }
.main-inner h3 { font-size: 1.3em; }
.main-inner h4 { font-size: 1.2em; }
.main-inner h5 { font-size: 1.1em; }
.main-inner h6 { font-size: 1.0em; }

.main-inner ul,
.main-inner ol,
.main-inner p {
    padding: 5px 0;
}

.main-inner li{
    margin-left: 25px;
}

.main-inner p > code {
    background-color: #eee;
    border: 1px solid #999;
    border-radius: 4px;
    padding: 0 2px;
    margin: 0 2px;
}

.highlight {
    background: #fff;
    color: #000;
    border: 1px solid #ccc;
    border-radius: 7px;
    padding: 5px 10px;
    margin: 10px 0;
    clear: both;
    font-size: 1.2em;
}

.highlight pre {
    padding: 0;
    margin: 0;
}

.footer {
    clear: both;
    padding: 50px 0;
    text-align: center;
    font-size: .8em;
}

article.news {
    padding-bottom: 20px;
}

